reword comment